# tracer-api

./: .gitignore  AI_ROUTES_IMPLEMENTATION.md  DB_CONNECTION_FIX.md  Dockerfile  FEEDBACK_POSTGRES_MIGRATION.md  FINAL_CHANGES_SUMMARY.md  FIXES_APPLIED.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LEARNED_DATA_POSTGRES.md  MARINE_API_IMPLEMENTATION.md  MARINE_INTEGRATION.md  PERFORMANCE_ANALYSIS.md  POOL_EXHAUSTION_FIX.md  POSTGRES_MIGRATION_SUMMARY.md  PROFILING_README.md  PROFILING_SUMMARY.md  RESEARCH_RERUN_ROUTES.md  TIME_INDEX_EXPLANATION.md  USER_MANAGEMENT_README.md  add_performance_indexes.sql  ai_classify.py  ai_helpers.py  anomaly_pipeline.py  app.py  apprunner.yaml  batch_classify_flights.py  check_live_schema.py  data.json  env.example  flight_fetcher.py  get_sample_flight_ids.py  main.py  profile_detailed.py  profile_routes.py  profile_standalone.py  pyproject.toml  req  requirements-ai.txt  requirements.txt  (+2 more)
api/: api.py
core/: airport_lookup.py  auth_models.py
migrations/: 001_create_users_and_sessions.sql
routes/: __init__.py  ai_routes.py  analytics.py  feedback.py  flights.py  manual_route_planner.py  marine_routes.py  route_planning.py  trajectory_planner.py  users.py
scripts/: API_ROUTES_UPDATED.md  CHECKLIST.md  MIGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_LEARNED_DATA_UPLOAD.md  SUMMARY.md  create_admin_user.py  create_feedback_schema.sql  flights_near_point.py  flights_near_point_standalone.py  migrate_feedback_to_postgres.py  run_migration.sh  upload_learned_data_to_postgres.py
(+26 files in other folders)
